// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> LivePreview story renders snapshot 1`] = `
<div
  style="padding: 24px; width: 600px;"
>
  <div
    class="css-1v3i1xe"
    role="banner"
  >
    <div
      class="css-1879pua"
    >
      <div
        class="css-1f3aume"
      >
        <div
          class="css-jbvua0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-25m3b5-MuiSvgIcon-root"
            data-jest-file-name="IconInfoCircleLarge.svg"
            data-jest-svg-name="IconInfoCircleLarge"
            data-testid="IconInfoCircleLarge"
            fillcontrast="white"
            focusable="false"
            viewBox="0 0 32 32"
          />
        </div>
      </div>
      Banner text lorem ipsum dolor mit
    </div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-reo6um-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    style="height: 24px;"
  />
  <div
    class="css-1doigm5"
    role="banner"
  >
    <div
      class="css-1879pua"
    >
      <div
        class="css-1f3aume"
      >
        <div
          class="css-jbvua0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-25m3b5-MuiSvgIcon-root"
            data-jest-file-name="IconInfoCircleLarge.svg"
            data-jest-svg-name="IconInfoCircleLarge"
            data-testid="IconInfoCircleLarge"
            fillcontrast="white"
            focusable="false"
            viewBox="0 0 32 32"
          />
        </div>
      </div>
      Banner text lorem ipsum dolor mit
      <div
        style="padding: 5px;"
      />
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1ef6141-MuiTypography-root-MuiLink-root"
        href="/"
      >
        Learn More
      </a>
    </div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-quxuam-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    style="height: 24px;"
  />
  <div
    class="css-n7miuv"
    role="banner"
  >
    <div
      class="css-1879pua"
    >
      <div
        class="css-1f3aume"
      >
        <div
          class="css-jbvua0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-25m3b5-MuiSvgIcon-root"
            data-jest-file-name="IconInfoCircleLarge.svg"
            data-jest-svg-name="IconInfoCircleLarge"
            data-testid="IconInfoCircleLarge"
            fillcontrast="white"
            focusable="false"
            viewBox="0 0 32 32"
          />
        </div>
      </div>
      Stylable. Should have pink background color
    </div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-reo6um-MuiButtonBase-root-MuiIconButton-root"
      data-testid="iconButton"
      tabindex="0"
      type="button"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`<Banner /> Test story renders snapshot 1`] = `
<div
  class="css-1v3i1xe"
  role="banner"
>
  <div
    class="css-1879pua"
  >
    <div
      class="css-1f3aume"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-25m3b5-MuiSvgIcon-root"
          data-jest-file-name="IconInfoCircleLarge.svg"
          data-jest-svg-name="IconInfoCircleLarge"
          data-testid="IconInfoCircleLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
    </div>
    test text
  </div>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-reo6um-MuiButtonBase-root-MuiIconButton-root"
    data-testid="iconButton"
    tabindex="0"
    type="button"
  >
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q6hio5-MuiSvgIcon-root"
        data-jest-file-name="IconXMarkSmall.svg"
        data-jest-svg-name="IconXMarkSmall"
        data-testid="IconXMarkSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
